[package]
name = "lit-frost"
version = "0.3.0"
edition = "2021"

[features]
default = []
verify_only = []

[dependencies]
anyhow = "1.0"
ark-serialize = "0.4"
curve25519-dalek = { version = "=4.3.0", features = ["rand_core", "group"], package = "curve25519-dalek-ml" }
decaf377 = { version = "0.10.1", git = "https://github.com/LIT-Protocol/decaf377.git", rev = "1c5755b2b90e1969d47ce89cf2d35078984a0ee5" }
decaf377-rdsa = { version = "0.11.0" }
ed25519-dalek = "2.1"
ed448-goldilocks = { version = "0.16", package = "ed448-goldilocks-plus" }
frost-core = { features = ["internals"], git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-decaf377 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-ed25519 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-ed448 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-p256 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-p384 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-redjubjub = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-ristretto255 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-secp256k1 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-schnorrkel25519 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
frost-taproot = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.1.0" }
hex = "0.4"
jubjub = { package="jubjub-plus" , version = "0.10" }
k256 = { version = "0.13", features = ["arithmetic", "schnorr"] }
p256 = { version = "0.13", features = ["arithmetic"] }
p384 = { version = "0.13", features = ["arithmetic"] }
rand_core = "0.6"
reddsa = "0.5"
schnorrkel = "0.11"
serde = "1.0"
serde_bare = "0.5"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
vsss-rs = { version = "5.1.0", features = ["curve25519"] }
zeroize = "1.8"

[target.'cfg(target_pointer_width = "32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
group = "0.13"
ff = "0.13"
frost-dkg = "0.3.0"
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3.1"
rstest = "0.24"
signature_crypto = { version = "2.2", package = "signature" }
