[package]
name = "lit-frost"
version = "0.4.0"
edition = "2024"

[features]
default = []
verify_only = []

[dependencies]
anyhow = "1.0"
ark-serialize = "0.4"
decaf377-rdsa = { version = "0.11.0" }
ed25519-dalek = "2.1"
frost-core = { features = ["internals"], git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-decaf377 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-ed25519 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-ed448 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-p256 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-p384 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-redpallas = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-redjubjub = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-ristretto255 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-secp256k1 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-schnorrkel25519 = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
frost-taproot = { git = "https://github.com/LIT-Protocol/frost.git", branch = "2.2.0" }
hex = "0.4"
rand_core = "0.6"
reddsa = "0.5"
schnorrkel = "0.11"
serde = "1.0"
serde_bare = "0.5"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
zeroize = "1.8"

[dependencies.lit-rust-crypto]
git = "https://github.com/LIT-Protocol/lit-rust-crypto"
tag = "0.5.0"
features = [
    "blst",
    "curve25519-dalek-default",
    "decaf377-default",
    "elliptic-curve-default",
    "ed448-goldilocks-default",
    "jubjub-default",
    "k256-default",
    "p256-default",
    "p384-default",
    "pasta-default",
    "vsss-rs-default",
]

[target.'cfg(target_pointer_width = "32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
group = "0.13"
ff = "0.13"
frost-dkg = "0.5.0"
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3.1"
rstest = "0.26"
signature_crypto = { version = "2.2", package = "signature" }
