[package]
authors = ["LIT Protocol Developers"]
categories = ["cryptography"]
description = "Compatibility library for the Frost signing protocol across multiple curves"
documentation = "https://docs.rs/lit-frost"
edition = "2024"
exclude = ["tests/**", "benches/**", "examples/**", ".github/**"]
homepage = "https://crates.io/crates/lit-frost"
keywords = ["dkg", "key", "generation", "distributed", "frost"]
license = "Apache-2.0 OR MIT"
name = "lit-frost"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/lit-frost"
version = "0.4.0"

[features]
default = []
verify_only = []

[dependencies]
anyhow = "1.0"
ark-serialize = "0.4"
decaf377-rdsa = { version = "0.11.0" }
ed25519-dalek = "2.1"
frost-core = { version = "1.0.0", features = ["internals"], package = "lit-frost-core" }
frost-decaf377 = { version = "1.0.0", package = "lit-frost-decaf377" }
frost-ed25519 = { version = "1.0.0", package = "lit-frost-ed25519" }
frost-ed448 = { version = "1.0.0", package = "lit-frost-ed448" }
frost-p256 = { version = "1.0.0", package = "lit-frost-p256" }
frost-p384 = { version = "1.0.0", package = "lit-frost-p384" }
frost-redpallas = { version = "1.0.0", package = "lit-frost-redpallas" }
frost-redjubjub = { version = "1.0.0", package = "lit-frost-redjubjub" }
frost-ristretto255 = { version = "1.0.0", package = "lit-frost-ristretto255" }
frost-secp256k1 = { version = "1.0.0", package = "lit-frost-secp256k1" }
frost-schnorrkel25519 = { version = "1.0.0", package = "lit-frost-schnorrkel25519" }
frost-taproot = { version = "1.0.0", package = "lit-frost-taproot" }
hex = "0.4"
rand_core = "0.6"
reddsa = "0.5"
schnorrkel = "0.11"
serde = "1.0"
serde_bare = "0.5"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
zeroize = "1.8"

[dependencies.lit-rust-crypto]
version = "0.6.0"
features = [
    "blst",
    "curve25519-dalek-default",
    "decaf377-default",
    "elliptic-curve-default",
    "ed448-goldilocks-default",
    "jubjub-default",
    "k256-default",
    "p256-default",
    "p384-default",
    "pasta-default",
    "vsss-rs-default",
]

[target.'cfg(target_pointer_width = "32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
group = "0.13"
ff = "0.13"
frost-dkg = "0.5.0"
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3.1"
rstest = "0.26"
signature_crypto = { version = "2.2", package = "signature" }
